--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
     "scrollreveal": "^4.0.9"
   },
